--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -51,7 +51,7 @@ RUN sudo pip install -U pip &&\
     pandas \
     openpyxl \
     findspark \
-    tensorflow-serving-api
+    tensorflow-serving-api -i https://pypi.tuna.tsinghua.edu.cn/simple
 
 WORKDIR /home/$USERNAME
 
